compiler/tests/fixtures/valid/inheritance_role_rename.viv
// Child action that renames a parent role

template action base-exchange:
    roles:
        @giver:
            as: initiator
        @receiver:
            as: recipient
    conditions:
        @giver.trust > 0


action gift from base-exchange:
    join roles:
        @donor:
            renames: @giver
